Fixed the spacing below doctor title and details with no rating. Empty div will display regardless to keep adjustment spacing.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -183,6 +183,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: .5em;
+  min-height: 10px;
   
   @include breakpoint($bp1) {
     flex-direction: row;
